# cdk-python-stack

./: .env.example  .gitignore  README.md  app.py  pyproject.toml
lambda/: lambda_function.py  lambda_function_2.py
my_first_python_stack/: my_first_python_stack_stack.py
tests/unit/: test_my_first_python_stack_stack.py
